<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/card_template"
        android:contentDescription="@string/card_template"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/info_fragment_card"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dp_32"
        android:paddingVertical="@dimen/dp_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jost_regular"
            android:gravity="center_horizontal"
            android:text="@string/collaborate_in_junkielabs"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_32"
            android:fontFamily="@font/jost_regular"
            android:gravity="center_horizontal"
            android:text="@string/at_junkielabs_we_create_apps_for_new_developers"
            android:textSize="@dimen/sp_14" />

        <Button
            android:id="@+id/button_github"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:backgroundTint="@color/black"
            android:drawableLeft="@drawable/github_icon"
            android:fontFamily="@font/plusjakartasans_regular"
            android:text="@string/github"
            android:textSize="@dimen/sp_16" />

        <Button
            android:id="@+id/button_junkiesLabs"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_10"
            android:backgroundTint="#F81E37"
            android:fontFamily="@font/raleway_regular"
            android:text="@string/visit_junkielabs" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>